Added merge cart logic
