# storage/api-docs/api-docs.json
@@ -49,7 +49,13 @@
                     "422": {
                         "description": "Validation error."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "guest_token": []
+                    },
+                    {}
+                ]
             }
         },
         "/auth/logout": {
@@ -147,7 +153,13 @@
                     "422": {
                         "description": "Validation error."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "guest_token": []
+                    },
+                    {}
+                ]
             }
         },
         "/cart": {
